# lila-research

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: claude.yml
architecture/: README.md
architecture/diagrams/: 02_architecture_diagrams.md
architecture/docs/: 01_component_inventory.md  03_data_flows.md  04_api_reference.md
claude_code_scripts/: check-services.sh  run_rag_evaluation_pipeline.py
src/: __init__.py  data_loader.py  langchain_eval_experiments.py  langchain_eval_foundations_e2e.py  langchain_eval_golden_testset.py
validation/: README.md  postgres_data_analysis.py  retrieval_strategy_comparison.py  validate_telemetry.py
